--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
     <name>leaving-system-team2</name>
     <description>leaving-system-team2</description>
     <properties>
+        <bootstrap.version>4.0.0-2</bootstrap.version>
         <java.version>17</java.version>
     </properties>
     <dependencies>
@@ -24,6 +25,7 @@
         <dependency>
             <groupId>org.thymeleaf.extras</groupId>
             <artifactId>thymeleaf-extras-java8time</artifactId>
+            <version>2.1.0.RELEASE</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -62,6 +64,12 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+
+         <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>bootstrap</artifactId>
+            <version>${bootstrap.version}</version>
         </dependency>
 
         <!-- <dependency>
