--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,22 @@
-#Database Configuration
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:cts
-spring.datasource.username=sa
-spring.datasource.password=password
-#JPA Configuration
-spring.jpa.database=h2
-spring.jpa.show-sql=true
-#Hibernate Configuration
-spring.jpa.hibernate.ddl-auto=update
+# #Database Configuration
+# spring.datasource.driverClassName=org.h2.Driver
+# spring.datasource.url=jdbc:h2:mem:cts
+# spring.datasource.username=sa
+# spring.datasource.password=password
+# #JPA Configuration
+# spring.jpa.database=h2
+# spring.jpa.show-sql=true
+# #Hibernate Configuration
+# spring.jpa.hibernate.ddl-auto=update
 
-#DateTime
-spring.mvc.format.date=yyyy-MM-dd
-logging.level.org.springframework.web=DEBUG
+# #DateTime
+# spring.mvc.format.date=yyyy-MM-dd
+# logging.level.org.springframework.web=DEBUG
+
+server.port = 8080
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.url=jdbc:mysql://localhost:3306/db_pearl
+spring.datasource.username=root
+spring.datasource.password=Qewads2005!
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.show-sql: true
