--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,9 +14,9 @@ spring.mvc.format.date=yyyy-MM-dd
 logging.level.org.springframework.web=DEBUG
 
 server.port = 8080
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.url=jdbc:mysql://localhost:3306/db_yunting
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=kaung
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
