fixed employee bug and leave bug

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@
 # spring.jpa.hibernate.ddl-auto=update
 
 #DateTime
-spring.mvc.format.date=yyyy-MM-dd
+spring.mvc.format.date=yyyy-MM-dd HH:mm
 logging.level.org.springframework.web=DEBUG
 
 server.port = 8080
