--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,8 +15,8 @@ logging.level.org.springframework.web=DEBUG
 
 server.port = 8080
 spring.jpa.hibernate.ddl-auto=create-drop
-spring.datasource.url=jdbc:mysql://localhost:3306/db_yunting
+spring.datasource.url=jdbc:mysql://localhost:3306/db_team2
 spring.datasource.username=root
-spring.datasource.password=kaung
+spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
